kubernetes/mysql-db-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gin-demo
  labels:
    app: gin-demo
spec:
  selector:
    matchLabels:
      app: gin-demo
      tier: mysql
  strategy:
    type: Recreate
  replicas: 1
  template:
    metadata:
      labels:
        app: gin-demo
        tier: mysql
    spec:
      containers:
        - image: mysql:8.0
          name: mysql
          imagePullPolicy: "IfNotPresent"
          ports:
            - containerPort: 3306
              name: mysql
          volumeMounts:
            - mountPath: /var/lib/mysql
              name: mysql-persistent-storage
      volumes:
        - name: mysql-persistent-storage
          persistentVolumeClaim:
            claimName: mysql-pv-claim
