kubernetes/app-gin-demo-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-gin-demo
  labels:
    app: app-gin-demo
spec:
  type: NodePort
  selector:
    app: app-gin-demo
  ports:
    - name: http
      port: 8080
      targetPort: 8080
