kubernetes/mysql-db-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gin-demo
  labels:
    app: gin-demo
spec:
  type: NodePort
  ports:
    - port: 3306
  selector:
    app: gin-demo
    tier: mysql
